Apply OpenRewrite (without module-info.java) (#11330)
* Apply OpenRewrite (without module-info.java)

* Fix checkstyle